second try on the shading

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <li>Donald Trump</li>
       <li>Lansing Code Lab</li>
       <li>Sparty</li>
-      <li></li>
-      <li>Spartan Super Fan</li>
+      <li>Chris from Code Lab!</li>
       <li>Grumpy Cat</li>
+      <li></li>
     </ul>
   </body>
 </html>
